<resources>
    <string name="app_name">Word Chain</string>
    <string name="facebook_app_id" translatable="false">1269718706745881</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1269718706745881</string>
    //Home Activity
    <string name="userWelcomeText">Hello There!</string>
    <string name="userWelcomeSloganText">Let\'s Practise English Vocabulary</string>
    <string name="playGame">Play Game</string>
    <string name="playGameDescription">Tap here to play the game.</string>
    <string name="howToPlayText">How To Play</string>
    <string name="howToPlayDescription">Tap here to view the instructions on how to play the game.</string>
    <string name="activateProText">Activate Pro</string>
    <string name="activateProDescription">You can activate and use the pro feature of this application</string>
    <string name="changelang">Change Language</string>
    <string name="hello">Hello \u0020</string>

    //How To Play Activity
    <string name="playStep1">Step 01</string>
    <string name="playStepInfo1">App will give you a word first.</string>
    <string name="playStep2">Step 02</string>
    <string name="playStep3">Step 03</string>
    <string name="playStep4">Step 04</string>
    <string name="playStepInfo2">Your task is to give an English word that start from the last letter of the given word.</string>
    <string name="playStepInfo3">Then the app will give another word starting from the last letter of the word given by you.</string>
    <string name="playStepInfo4">Game continues until the time exceeds or someone loose (you or the app).</string>

    //Change Language Bottom Sheet
    <string name="languageLabel">Select Preferred Language</string>
    <string name="lang">Please Select</string>
    <string name="language_changed_success_message">Language Changed Successfully</string>

    //Username Dialog
    <string name="playText">WORD CHAIN</string>
    <string name="submitText">Submit</string>
    <string name="cancelcl">Cancel</string>
    <string name="emptyUsernaName">Please enter your name</string>
    <string name="invalidUserName">Username should contain only letters</string>
    <string name="ok">OK</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="name">Name</string>

    //splash screen
    <string name="splash_description">Let\'s Practise English Vocabulary</string>

    //Profile Activity
    <string name="play_profile">Play</string>
    <string name="score_profile">Score</string>
    <string name="words_profile">Words</string>
    <string name="noScoresYet">You do not have any scores yet.</string>
    <string name="start_game">Start Game</string>

    //Winning Activity
    <string name="congratulations">Congratulations!!</string>
    <string name="you_won">You Won</string>
    <string name="show_words">Show Words</string>
    <string name="your_score">Your Score :\u0020</string>

    //Word Chain Activity
    <string name="game_over">Game Over!</string>
    <string name="main_time_finished">Time Up!!!</string>

    //Words Activity
    <string name="set_of_words">Set of Words to Remember</string>
    <string name="words_used_by_game_play_attempt">Words used by Game play attempt :\u0020</string>
    <string name="pausedialog">Pause Game!</string>
    <string name="pauseornot">Do you want to pause and finish the Game?</string>
    <string name="activate_pro_dialog_title">Activate Pro</string>
    <string name="activate_pro_dialog_description">Please activate the WordChain pro to Enjoy premium benefits just for five rupees plus tax per day.</string>
    <string name="proceed">PROCEED</string>
    <string name="enter_mobile_number">Please enter your mobile number</string>
    <string name="enter_mobile_number_des">Enter your mobile number below and get SMS pin to activate</string>
    <string name="mobile_num_hint">(07X)-XXX-XXXX</string>
    <string name="pleaseTryAgain">Please Try Again</string>
    <string name="notReceivedActivationCode">Did\'t received the code?</string>
    <string name="submit">Submit</string>
    <string name="DIALOG" translatable="false">Dialog</string>
    <string name="MOBITEL" translatable="false">Mobitel</string>
    <string name="HUTCH" translatable="false">Hutch</string>
    <string name="AIRTEL" translatable="false">Airtel</string>
    <string name="err_no_mobile_num">Please enter your mobile number</string>
    <string name="coundownDescription">Please Wait…!</string>
    <string name="activateSubscription">Activate</string>
    <string name="classifiedSubscriptionCodeError">Please enter 6-Digit code properly</string>
    <string name="alreadyPremiumUser">You are already a Premium User</string>
    <string name="unableToGetSubsStatus">Unable to get user Subscription information. Please Try Again!</string>
    <string name="mobileNumberPrefix" translatable="false">94</string>
    <string name="pleasewait">PLEASE WAIT...</string>
    <string name="err_something_wrong">Something went wrong. Try Again.</string>
    <string name="subscriptionCodeNotFound">Invalid OTP Code</string>
    <string name="subscriptionCodeExpired">Code has been Expired</string>
    <string name="you_are_pro_user">You are a Premium User</string>
    <string name="you_are_pro_user_des">Pro users enjoy features that other users don\'t have</string>
    <string name="pro_cost_des">Word Chain Pro will cost five rupees plus tax per day. Enjoy Pro.</string>
    <string name="extendDialogTitle">Time Up</string>
    <string name="extendDialogDes">You can extend the time by 15 seconds if you activate pro.</string>
    <string name="extend">Extend</string>
    <string name="activatePro">ACTIVATE PRO</string>
    <string name="finish_game">Finish Game</string>
    <string name="winning_activity_dialog_title">Activate Pro to Show Words list</string>
    <string name="winning_activity_dialog_des">Only Pro users can show the word list. Please activate the WordChain Pro.</string>
    <string name="waiting_registration">Awaiting for Registration</string>
    <string name="already_registered">You are already Registered.</string>
</resources>
