<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:background="@drawable/bottom_sheet_shape">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/home_mainMarginTop"
        android:layoutDirection="ltr"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="4"
        tools:ignore="UnusedAttribute">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="4"
            android:orientation="vertical"
            android:paddingTop="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userWelcome"
                    style="@style/homeActivityUserGreetingHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="10"
                    android:text="@string/userWelcomeText" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/userWelcomeSlogan"
                    style="@style/homeActivityUserGreetingSlogan"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:text="@string/userWelcomeSloganText" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:padding="5dp"
        android:visibility="visible">

        <!-- Spinner Element -->
        <TextView
            android:id="@+id/textView29"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/languageLabel"
            android:textColor="@color/grey"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:prompt="@string/lang" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layoutDirection="ltr"
        android:orientation="vertical"
        android:padding="8dp"
        tools:ignore="UnusedAttribute">

        <Button
            android:id="@+id/changeLanguageBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/languageChangeBtnHeight"
            android:background="@drawable/button_language_shape"
            android:foreground="?attr/selectableItemBackground"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:stateListAnimator="@null"
            android:text="@string/changelang"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>