<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/colorPrimary">

            <TextView
                android:id="@+id/dialog_titile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:gravity="center_horizontal"
                android:text="@string/activate_pro_dialog_title"
                android:textColor="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/dialog_box"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/dialog_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/dialog_titile"
                android:paddingBottom="16dp"
                android:paddingLeft="8dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/activate_pro_dialog_description"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:gravity="center_horizontal" />

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/activateProDialogAnimationView"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                app:lottie_autoPlay="true"
                app:lottie_fileName="pro.json"
                app:lottie_loop="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dialog_neutral_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_alignBaseline="@id/dialog_neutral_btn"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@id/dialog_positive_btn"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:background="@drawable/secondary_button_shape"
                    android:foreground="?attr/selectableItemBackground"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/cancelcl"
                    android:textAllCaps="true"/>

                <Button
                    android:id="@+id/dialog_positive_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:layout_marginLeft="10dp"
                    android:layout_alignBaseline="@id/dialog_neutral_btn"
                    android:layout_alignParentRight="true"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="@string/proceed"
                    android:textAllCaps="true"
                    android:background="@drawable/shapeprcoeed"
                    android:foreground="?attr/selectableItemBackground"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>